/*
 * record_planner_config.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2024 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package com.apple.foundationdb.record;

option java_outer_classname = "RecordPlannerConfigurationProto";

message PlannerConfiguration {
    enum IndexScanPreference {
        PREFER_SCAN = 0;
        PREFER_INDEX = 1;
        PREFER_PRIMARY_KEY_INDEX = 2;
    }

    enum IndexFetchMethod {
        SCAN_AND_FETCH = 0;
        USE_REMOTE_FETCH = 1;
        USE_REMOTE_FETCH_WITH_FALLBACK = 2;
    }

    enum KeyValueCursorContinuationSerializationMode {
        TO_OLD = 0;
        TO_NEW = 1;
    }

    message SortConfiguration {
        optional bool shouldAllowNonIndexSort = 1;
    }

    optional int64 flags = 1; // used to collect multiple Boolean configuration flags
    optional IndexScanPreference indexScanPreference = 2;
    optional int32 attemptFailedInJoinAsUnionMaxSize = 3;
    optional int32 complexityThreshold = 4;
    optional int32 maxTaskQueueSize = 5;
    optional int32 maxTotalTaskCount = 6;
    optional int32 maxNumMatchesPerRuleCall = 7;
    optional SortConfiguration sortConfiguration = 8;
    repeated string disabledTransformationRules = 9;
    optional IndexFetchMethod indexFetchMethod = 10;
    repeated string valueIndexesOverScanNeeded = 11;
    optional int32 maxNumReplansForInToJoin = 12;
    optional int32 orToUnionMaxNumConjuncts = 13;
    optional int32 maxNumReplansForInUnion = 14;
    optional KeyValueCursorContinuationSerializationMode keyValueCursorContinuationSerializationMode = 15;
}
